# kelly-criterion-rs

./: Cargo.toml  README.md
src/: main.rs  orchestra.rs  simulation.rs
src/multi/: mod.rs  orchestrator.rs  simulation.rs  task.rs  worker.rs
